new update 1.2 add new animation to the main page, return html files from app folder.

--- a/app/scss/homepage.scss
+++ b/app/scss/homepage.scss
@@ -573,8 +573,22 @@
   width: 100%;
   max-width: 500px;
   height: 100%;
-  // -o-object-fit: contain;
   object-fit: contain;
+  animation: bottomSneaker 3s ease infinite alternate;
+}
+
+@keyframes bottomSneaker {
+  0% {
+    transform: translateX(0) translateY(0);
+  }
+
+  35% {
+    transform: translateX(34px) rotate(25deg) translateY(30px);
+  }
+
+  100% {
+    transform: translateX(-50px) rotate(-15deg)  translateY(-60px);
+  }
 }
 
 .action-2-link {
