--- a/app/scss/search.scss
+++ b/app/scss/search.scss
@@ -13,24 +13,11 @@
 }
 
 .search-input-container {
-  // display: -webkit-box;
-  // display: -webkit-flex;
-  // display: -ms-flexbox;
   display: flex;
-  // -webkit-flex-direction: column;
-  // -ms-flex-direction: column;
   flex-direction: column;
-  // -webkit-align-items: center;
   align-items: center;
-  // -webkit-justify-content: center;
   justify-content: center;
   min-width: 100%;
-  // -webkit-box-pack: center;
-  // -ms-flex-pack: center;
-  // -webkit-box-align: center;
-  // -ms-flex-align: center;
-  // -webkit-box-orient: vertical;
-  // -webkit-box-direction: normal;
 }
 
 .search-input {
@@ -59,8 +46,6 @@
   border: 0;
   cursor: pointer;
   opacity: 0;
-  // -webkit-transition: opacity 0.3s;
-  // -o-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
 
@@ -69,15 +54,12 @@
 .search-section {
   padding: 70px 0;
   border-top: 1px solid #dbdbdb;
-  // -webkit-transition: all 0.2s;
-  // -o-transition: all 0.2s;
   transition: all 0.2s;
 }
 
 .sneakers-browse-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   margin: 0;
 }
 
@@ -85,7 +67,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: calc(100% / 4);
 }
 
 .browse-item-link {
@@ -111,15 +92,9 @@
   margin: 0;
 }
 
-@media screen and (max-width: 768px) {
-  .browse-item {
-    width: calc(100% / 3);
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .browse-item {
-    width: calc(100% / 2);
+@media screen and (max-width: 980px) {
+  .sneakers-browse-container {
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
   }
 }
 
@@ -130,5 +105,18 @@
 
   .browse-item-link {
     padding: 10px;
+  }
+}
+
+.added {
+  width: 100%;
+  color: #7e7e7e;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.4;
+  text-align: center;
+
+  @media screen and (max-width: 500px) {
+    font-size: 18px;
   }
 }
